--- a/PyCityschools.ipynb
+++ b/PyCityschools.ipynb
@@ -6709,7 +6709,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "9a57c801",
+   "id": "af32878e",
    "metadata": {},
    "outputs": [
     {
@@ -6748,7 +6748,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "3da1e7cd",
+   "id": "43afb1d6",
    "metadata": {},
    "outputs": [
     {
@@ -6775,7 +6775,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "1736fd87",
+   "id": "7df1a9ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6787,7 +6787,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "73b7599f",
+   "id": "c3d5b0d9",
    "metadata": {},
    "outputs": [
     {
@@ -7125,7 +7125,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "c898d48f",
+   "id": "49b94d69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7144,7 +7144,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "d165189a",
+   "id": "14b55915",
    "metadata": {},
    "outputs": [
     {
@@ -7170,7 +7170,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "84d79a8b",
+   "id": "a4ddfc4a",
    "metadata": {},
    "outputs": [
     {
@@ -7196,7 +7196,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "5f81067e",
+   "id": "841b8bda",
    "metadata": {},
    "outputs": [
     {
@@ -7222,7 +7222,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "6fb275f9",
+   "id": "a0319dd0",
    "metadata": {},
    "outputs": [
     {
@@ -7248,7 +7248,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "006d20bd",
+   "id": "19f3bd3a",
    "metadata": {},
    "outputs": [
     {
@@ -7274,7 +7274,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "221f8dc4",
+   "id": "94a32f32",
    "metadata": {},
    "outputs": [
     {
@@ -7393,7 +7393,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "302126c5",
+   "id": "d0855962",
    "metadata": {},
    "outputs": [
     {
@@ -7515,7 +7515,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "6816f9ae",
+   "id": "b2383bec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7527,7 +7527,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "19557e0e",
+   "id": "ad382fe2",
    "metadata": {},
    "outputs": [
     {
@@ -7691,7 +7691,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "2e93f4e5",
+   "id": "d1a335f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7706,7 +7706,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "be9892f4",
+   "id": "8d6cc9c4",
    "metadata": {},
    "outputs": [
     {
@@ -7731,7 +7731,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "35a667f6",
+   "id": "b7be61bf",
    "metadata": {},
    "outputs": [
     {
@@ -7756,7 +7756,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "ecbc00a4",
+   "id": "afdaf275",
    "metadata": {},
    "outputs": [
     {
@@ -7781,7 +7781,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "230fc3f2",
+   "id": "e16dd855",
    "metadata": {},
    "outputs": [
     {
@@ -7806,7 +7806,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "ddd33baf",
+   "id": "3b7a7e70",
    "metadata": {},
    "outputs": [
     {
@@ -7831,7 +7831,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "4cbe144a",
+   "id": "d1e1a0a9",
    "metadata": {},
    "outputs": [
     {
@@ -7933,7 +7933,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "965fe945",
+   "id": "47863511",
    "metadata": {},
    "outputs": [
     {
@@ -8037,11 +8037,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "99501e1a",
+   "execution_count": 137,
+   "id": "4318646a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "75791fc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8edcbe2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Formatting.\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
   }
  ],
  "metadata": {
