--- a/PyCityschools_Challenge.ipynb
+++ b/PyCityschools_Challenge.ipynb
@@ -642,11 +642,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c837331f",
+   "id": "47866d01",
    "metadata": {},
    "source": [
     "### The total number of students in 9th grade at Thomas High School are 461\n",
-    "### The new student count in Thomas High School is 38709"
+    "### The new student count is 38709."
    ]
   },
   {
@@ -814,10 +814,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a74f7e6",
+   "id": "767e7e37",
    "metadata": {},
    "source": [
-    "### After removing the grade 9 scores from Thomas High School: In the district summary, the overall passing percentage dropped slightly to 64.9%"
+    "### After removing the grade 9 scores from Thomas High School: In the district summary, the overall passing percentage dropped slightly to 64.9% from 65.1%"
    ]
   },
   {
@@ -1638,21 +1638,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbecda7c",
+   "id": "25e0dfec",
    "metadata": {},
    "source": [
     "### After removing the 9th grade scores from Thomas High School: The Thomas High school summary,\n",
-    "### the math percentage increased from 66.9% to 93.1% ,\n",
+    "### the math percentage increased from 93.27% to 93.1% ,\n",
     "### the reading percentage increased from 69.6% to 97.01% and \n",
     "### the overall passing percentage increased from 65% to 90%"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "172b060e",
+   "cell_type": "markdown",
+   "id": "f050665f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## High and Low Performing Schools\n"
    ]
@@ -1952,6 +1950,14 @@
    "source": [
     "### The top 5 performing schools are Cabrera High, Thomas High, Griffin High, Wilson High and Pena High school\n",
     "### The bottom 5 performing schools are Rodriguez High, figuerosa High, Huang High, hernandez High and   Johnson High School."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68dc41e3",
+   "metadata": {},
+   "source": [
+    "### The per student budget for the 5 low performing schools are higher and the overall passing percentage are lower than the high performing schools."
    ]
   },
   {
@@ -2397,10 +2403,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9ba13c0",
+   "id": "0ee1869d",
    "metadata": {},
    "source": [
-    "### Thomas High School math grades for 10th, 11th and 12th dropped to 83.08, 83.49 and 83.49 from 83.1, 83.5 and 83.5."
+    "### Thomas High School math grades for 10th, 11th and 12th are 83.1, 83.5 and 83.5."
    ]
   },
   {
@@ -2579,11 +2585,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59be947d",
+   "id": "7da40968",
    "metadata": {},
    "source": [
-    "### Thomas High school reading grades for reading for 10th, 11th and 12th grades are 84.25, 83.58 and 83.83. \n",
-    "### The scores dropped from 84.3, 83.6 and 83.8. Overall there is not much change in grades."
+    "### Thomas High school reading grades for reading for 10th, 11th and 12th grades are 84.3, 83.6 and 83.8. \n"
    ]
   },
   {
@@ -2941,10 +2946,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7abe54a9",
+   "id": "2119043f",
    "metadata": {},
    "source": [
-    "### After removing 9th grade scores from thomas High School,we see a minor change in the math score, reading score and overall passing percentage. The change is not significant."
+    "### After removing 9th grade scores from thomas High School,we see a minor change in the math score, reading score and overall passing percentage. The overall percentage dropped from 90.94% to 90.63%. Other changes are not significant."
    ]
   },
   {
@@ -3512,7 +3517,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "609fada8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3623,6 +3630,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ccbd38d8",
+   "metadata": {},
+   "source": [
+    "### Medium and small schools have a much better overall passing percentage than the large schools."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e61ee4c7",
    "metadata": {},
    "source": [
@@ -3652,7 +3667,9 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "f5bff28e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
